--- a/_posts/2015-07-07-quotes.md
+++ b/_posts/2015-07-07-quotes.md
@@ -1,6 +1,6 @@
 ---
-layout: page
-title: QUOTES FOR SOFTWARE ENGINEERS
+layout: post
+title: Quotes for software engineers
 ---
 
 > ”Premature optimization is the root of all evil”
