Adding post and changing layout

--- a/_posts/2015-07-07-quotes.md
+++ b/_posts/2015-07-07-quotes.md
@@ -111,3 +111,5 @@ Another very good quote from Doug's
 > ”The notion of "intricate and beautiful complexities" is almost an oxymoron. Unix programmers vie with each other for "simple and beautiful" honors — a point that's implicit in these rules, but is well worth making overt.”
 > 
 > – Doug McIlroy
+
+If you think that there is something I missed or just want to get in touch, please contact me on Twitter <a href="https://twitter.com/larsbarkman" target="_blank">@larsbarkman</a>
